# NeuraAIBot

./: .env  main.py  pyproject.toml
commands/: .gitignore
commands/moderation/: ban.py  clear.py  editchannelname.py  kick.py  lock.py  unlock.py
